apps/prod/eden-outbox/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: eden-outbox
spec:
  redirectScheme:
    scheme: https
    permanent: true
