apps/prod/eden-outbox/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eden-outbox
  namespace: eden-outbox
  labels:
    app.kubernetes.io/name: eden-outbox
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: eden-outbox
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: eden-outbox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: eden-outbox
        app.kubernetes.io/component: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: eden-outbox
                topologyKey: kubernetes.io/hostname
      containers:
        - name: eden-outbox
          image: ghcr.io/rbxrobotica/eden-outbox:sha-0000000
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 300m
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
