apps/prod/eden-outbox/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: eden-outbox
  namespace: eden-outbox
  labels:
    app.kubernetes.io/name: eden-outbox
    app.kubernetes.io/part-of: eden-outbox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: eden-outbox
  ports:
    - port: 80
      targetPort: 8080
      name: http
